rp2/clocks_extra: Update runtime_clocks_init.
Note: This might be a tempoarary measure until we might fix this
properly to avoid copying code.

Signed-off-by: Damien George <damien@micropython.org>

--- a/ports/rp2/CMakeLists.txt
+++ b/ports/rp2/CMakeLists.txt
@@ -181,6 +181,7 @@ set(PICO_SDK_COMPONENTS
     cmsis_core
     hardware_adc
     hardware_base
+    hardware_boot_lock
     hardware_clocks
     hardware_dma
     hardware_flash
@@ -487,7 +488,7 @@ target_compile_options(${MICROPY_TARGET} PRIVATE
 target_link_options(${MICROPY_TARGET} PRIVATE
     -Wl,--defsym=__micropy_c_heap_size__=${MICROPY_C_HEAP_SIZE}
     -Wl,--wrap=dcd_event_handler
-    -Wl,--wrap=clocks_init
+    -Wl,--wrap=runtime_init_clocks
 )
 
 # Apply optimisations to performance-critical source code.
