ports/rp2: Use WPA3_WPA2 as default auth type.

--- a/ports/rp2/CMakeLists.txt
+++ b/ports/rp2/CMakeLists.txt
@@ -344,6 +344,7 @@ if (MICROPY_PY_NETWORK_CYW43)
     target_compile_definitions(${MICROPY_TARGET} PRIVATE
         MICROPY_PY_NETWORK_CYW43=1
         MICROPY_PY_SOCKET_DEFAULT_TIMEOUT_MS=30000 # default socket timeout
+        MICROPY_PY_NETWORK_CYW43_AUTH_TYPE_DEFAULT=CYW43_AUTH_WPA3_WPA2_AES_PSK
     )
     if (CMAKE_BUILD_TYPE MATCHES Debug)
     target_compile_definitions(${MICROPY_TARGET} PRIVATE
